# TQ-infer-engine

./: .env.example  .gitignore  Dockerfile  README.md  TurboQuant_Colab_T4_Complete.ipynb  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
configs/: ann_4bit.yaml  default.yaml  kv_cache_2bit.yaml  kv_cache_4bit.yaml
demo/: app.py
demo/assets/: description.md
notebooks/: 01_algorithm_deep_dive.ipynb  02_kv_cache_compression.ipynb  03_ann_search_benchmark.ipynb  04_full_pipeline_demo.ipynb
outputs/results/: ann_benchmark.csv  kv_cache_benchmark.csv
scripts/: download_datasets.py  run_ann_benchmark.py  run_kv_benchmark.py
tests/: conftest.py  test_kv_cache.py  test_polar_quant.py  test_qjl.py  test_search.py  test_turbo_quant.py
tqe/: __init__.py
tqe/algorithms/: __init__.py  polar_quant.py  qjl.py  turbo_quant.py
tqe/benchmarks/: ann_benchmark.py  distortion.py  kv_benchmark.py
tqe/kv_cache/: __init__.py  compressor.py  hooks.py  patching.py
tqe/search/: __init__.py  index.py  query.py
tqe/utils/: math_utils.py  memory_utils.py  visualization.py
